* testing/testing-blitz.html: Describe how to use this package for 	interoperability testing. 	* testing/testing-boost.html: Ditto. 	* testing/testing-lapack.html: Ditto. 	* testing/testing-qt.html: Ditto.

--- a/htdocs/testing/testing-blitz.html
+++ b/htdocs/testing/testing-blitz.html
@@ -87,6 +87,15 @@ make &lt;testname&gt;
 as well as building and running the tests, do <code>make all</code>
 instead of <code>make check</code>.</p>
 
+<h2>Interoperability testing</h2>
+
+<p>Before running the tests, <code>make check</code> builds the library
+<code>lib/libblitz.a</code> that is used by those tests.  Use Blitz++
+to test interoperability of two compilers by first configuring to use
+one compiler, building the library with <code>make lib</code>, running
+<code>configure</code> a second time specifying the second compiler,
+and then running <code>make check</code>.</p>
+
 <h2>Timing</h2>
 
 <p>TBD</p>
