--- a/htdocs/testing/testing-lapack.html
+++ b/htdocs/testing/testing-lapack.html
@@ -99,6 +99,15 @@ to find the number of failing tests.</p>
 
 <p>GCC 3.1 should not result in more failures than GCC 3.0.4</p>
 
+<h2>Interoperability testing</h2>
+
+<p>The make targets <code>testing</code> and <code>blas_testing</code>
+build tests that use libraries built for the previous targets.  LAPACK
+can be used to test interoperability of two compilers by first editing
+the <code>make.inc</code> file to use one compiler and building all of
+the libraries with that, and then modifying <code>make.inc</code> to
+specify a second compiler and making the testing targets.</p>
+
 <h2>Time</h2>
 
 <p>TBD</p>
