Add a description and link for VHDL, based on mail sent to gcc@gcc.gnu.org yesterday.

--- a/htdocs/frontends.html
+++ b/htdocs/frontends.html
@@ -68,6 +68,11 @@ a new frontend for GCC.</li>
 <li><a href="http://www.gnuprojects.org/spl/splf.htm">GNU Shakespeare</a>, 
 a "language with the expressiveness of BASIC and user-friendliness of assembly
 language".</li>
+
+<li><a href="http://ghdl.free.fr">GHDL</a> is a GCC front end for the
+VHDL (IEEE 1076) hardware design language.  GHDL and its runtime library
+are written in Ada95 using GNAT and are distributed under the GPL.
+Currently they only support GNU/Linux x86 systems.</li>
 </ul>
 
 </body>
