Mention the support for H8 Tiny.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -241,6 +241,8 @@
 	   <li>Function and Data sections now supported on AIX.</li>
 	   <li>Sibcall optimizations added.</li>
 	 </ul></li>
+     <li>The support for H8 Tiny is added to the H8/300 port with
+         <code>-mn</code>.</li>
   </ul>
 
 
