--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -93,5 +93,18 @@ rather than suspended.</dd>
 GCC, indicating that a certain problem must be solved before the next
 version of GCC is released.</p>
 
+<h2>Procedures and Policies</h2>
+
+<p><strong>Bugs in category "bootstrap"</strong> that refer to older
+releases or snapshots/CVS versions should be put into state "feedback",
+asking the reporter whether she can still reproduce the problem and to
+report her findings in any case (whether positive or negative).</p>
+
+<ul>
+<li>If the response is "works now", close the report,</li>
+<li>if the reponse is "still broken", change the state to "open", and</li>
+<li>if no response arrives close the PR after three months.</li>
+</ul>
+
 </body>
 </html>
