--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -103,7 +103,7 @@ report her findings in any case (whether positive or negative).</p>
 <ul>
 <li>If the response is "works now", close the report,</li>
 <li>if the reponse is "still broken", change the state to "open", and</li>
-<li>if no response arrives close the PR after three months.</li>
+<li>if no response arrives, close the PR after three months.</li>
 </ul>
 
 </body>
