--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -40,14 +40,12 @@ to maintain and improve quality.</p>
      and fourth.
 -->
 
-<!--
 <dl>
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.2/changes.html">GCC 3.2</a> (released 2002-08-14)
+  <a href="gcc-3.2/changes.html">GCC 3.2.1</a> (released 2002-11-21)
 </dt><dd>
   Open for all maintainers; fixes for regressions only.
 </dd>
--->
 
 <dt><strong>Previous release series:</strong>
   <a href="gcc-3.1/">GCC 3.1.1</a> (released 2002-07-26) 
@@ -56,12 +54,14 @@ to maintain and improve quality.</p>
   <a href="gcc-3.2/changes.html">GCC 3.2</a>-branch.
 </dd>
 
+<!--
 <dt><strong>Active release branch:</strong>
   GCC 3.2.1 (<a href="gcc-3.1/criteria.html">release criteria</a>,
              <a href="gcc-3.2/changes.html">changes</a>)
 </dt><dd>
   Non-documentation commits require approval by release manager.
 </dd>
+-->
 
 <dt><strong>Active development (mainline):</strong>
   will become <a href="gcc-3.3/changes.html">GCC 3.3</a>
@@ -82,6 +82,11 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+
+<dt><b>November 21, 2002</b></dt>
+<dd>
+<a href="gcc-3.2/">GCC 3.2.1</a> has been released.
+</dd>
 
 <dt><b>August 14, 2002</b></dt>
 <dd>
