--- a/htdocs/releases.html
+++ b/htdocs/releases.html
@@ -36,6 +36,7 @@ opposed to development snapshots).</p>
 <table border="1" cellspacing="0" cellpadding="5">
 <tr><th>Release</th><th>internal version</th><th>Release date</th></tr>
 
+<tr><td><a href="gcc-3.2/">GCC 3.2.1</a></td> <td></td> <td>November 21, 2002</td></tr>
 <tr><td><a href="gcc-3.2/">GCC 3.2</a></td> <td></td> <td>August 14, 2002</td></tr>
 <tr><td><a href="gcc-3.1/">GCC 3.1.1</a></td> <td></td> <td>July 26, 2002</td></tr>
 <tr><td><a href="gcc-3.1/">GCC 3.1</a></td>   <td></td> <td>May 15, 2002</td></tr>
