Add a note on the forthcoming 3.3 release branch.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -85,7 +85,9 @@ to maintain and improve quality.</p>
 
 <dt><b>November 21, 2002</b></dt>
 <dd>
-<a href="gcc-3.2/">GCC 3.2.1</a> has been released.
+<a href="gcc-3.2/">GCC 3.2.1</a> has been released.  We plan to shortly
+create the GCC 3.3 release branch (but want to fix a couple of high-priority
+regressions first).
 </dd>
 
 <dt><b>August 14, 2002</b></dt>
