Add entries for 3.2.1:   hppa2.0w-hp-hpux11.00   i686-pc-cygwin (Athlon) (Cygwin 1.3.14, Windows 98SE)   i686-pc-linux-gnu (Red Hat 7.2, glibc 2.2.4, binutils 2.13.1, kernel 2.4.7)   i686-pc-linux-gnu (SuSE 5.0, glibc 2.2.5, kernel 2.4.19)   i686-pc-linux-gnu (SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5)   powerpc-apple-darwin6.1 (Darwin 6.2)   powerpc-unknown-linux-gnu (SuSE 7.1, glibc 2.2, binutils 2.13, kernel 2.4.2)   sparc-sun-solaris2.7

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -86,6 +86,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>hppa2.0w-hp-hpux11.00</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00808.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00765.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa64-hp-hpux11.00</td>
 <td>binutils 2.13</td>
 <td>Successful (C, C++, F77, Obj-C):
@@ -197,6 +207,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-cygwin (Athlon)</td>
+<td>Cygwin 1.3.14, Windows 98SE</td>
+<td>Successful (C, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00768.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-cygwin</td>
 <td>Cygwin 1.3.12, Windows 2000 Pro</td>
 <td>Successful:
@@ -299,6 +316,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.2, glibc 2.2.4, binutils 2.13.1, kernel 2.4.7</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00786.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00725.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, kernel 2.4.9</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00094.html">3.2</a></td>
@@ -371,11 +398,20 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>SuSE 5.0 (many changes), glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00783.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2-17, binutils 2.13, kernel 2.4.5</td>
 <td>Successful (C, Obj-C):
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00900.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00900.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00768.html">3.2.1</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00483.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00698.html">3.2.1</a>
 </td>
 </tr>
 
@@ -460,6 +496,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-apple-darwin6.1</td>
+<td>Darwin 6.2</td>
+<td>Successful (with patch and rebuild):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00812.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>powerpc-ibm-aix4.2.1.0</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++):
@@ -511,6 +554,16 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>SuSE 7.1, glibc 2.2, binutils 2.13, kernel 2.4.2</td>
+<td>Successful (C, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00815.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00708.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
 <td>s390-ibm-linux</td>
 <td>Debian 3.0, glibc 2.2.5, binutils 2.12.90</td>
 <td>Successful (C, C++, F77, Obj-C):
@@ -558,6 +611,16 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01022.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00805.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00766.html">3.2.1</a>
 </td>
 </tr>
 
