--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -157,10 +157,7 @@ you may want to check out include:</p>
   &lt;<a href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas
   Jaeger &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.</li>
   <li>pch-branch.  This branch contains work-in-progress towards a
-  precompiled header implementation, including lots of garbage
-  collector changes.  A public announcement will be made
-  on the <a href="lists.html">GCC mailing list</a> when it is ready
-  for testing.</li>
+  precompiled header implementation.</li>
   <li>cp-parser-branch.  This branch contains a new hand-written recursive
   descent parser for C++.</li>
   <li><a href="projects/tree-ssa/index.html">tree-ssa-20020619-branch</a></li>
