Add entries for 3.2.1:   alpha-dec-osf4.0g (Tru64 4.0g)   i586-pc-linux-gnu (Mandrake 9.0)   i686-pc-linux-gnu (Debian 3.0 Woody, glibc 2.2.5, kernel 2.4.19)   i686-pc-linux-gnu (custom; glibc 2.2.5, kernel 2.4.18)   i686-pc-linux-gnu (athlon) (Red Hat 8.0, glibc 2.2.93, kernel 2.4.18)   i686-pc-linux-gnu (SuSE 7.3, glibc 2.2.4, kernel 2.4.10)   i686-pc-solaris2.8 (binutils 2.13.1)   powerpc-ibm-aix4.3.2.0   powerpc-ibm-aix5.1.0.0   sparc-sun-solaris2.7   sparc-sun-solaris2.8 plus new test results!

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -24,9 +24,10 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>alpha-dec-osf4.0g</td>
-<td>&nbsp;</td>
+<td>Tru64 4.0g</td>
 <td>Successful (C, C++, F77, Java, with tweaks):
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01082.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01082.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01005.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -184,6 +185,16 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
+<td>Mandrake 9.0</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00895.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00829.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00668.html">3.2</a></td>
@@ -243,6 +254,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Debian 3.0 Woody, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00993.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Debian Sarge, glibc 2.2.5, binutils 2.13.90.0.4, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00933.html">3.2</a>
@@ -269,7 +287,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>custom; glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01097.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01097.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00907.html">3.2.1></a></td>
 </tr>
 
 <tr>
@@ -376,6 +395,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>i686-pc-linux-gnu (athlon)</td>
+<td>Red Hat 8.0, glibc 2.2.93, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00989.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>i686-pc-linux-gnu</td>
 <td>Slackware 8.1, glibc 2.0.6, kernel 2.4.18</td>
 <td>Successful:
@@ -419,7 +445,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>i686-pc-linux-gnu</td>
 <td>SuSE 7.3, glibc 2.2.4, kernel 2.4.10</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00623.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-09/msg00623.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00930.html">3.2.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00488.html">3.2</a>
 </td>
@@ -430,6 +457,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>SCO OpenServer 3.2 v5.0.6</td>
 <td>Successful (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg00985.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-solaris2.8</td>
+<td>binutils 2.13.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01046.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -457,6 +491,22 @@ Installing GCC: Final Installation</a>.</p>
 <td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00488.html">3.2</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.2</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00739.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
+<td>mips-sgi-irix6.5</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00740.html">3.2.1</a>
 </td>
 </tr>
 
@@ -513,9 +563,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-ibm-aix4.3.2.0</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01144.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01144.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01042.html">3.2.1</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00633.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00633.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00980.html">3.2.1</a>
 </td>
 </tr>
 
@@ -537,9 +589,11 @@ Installing GCC: Final Installation</a>.</p>
 <td>powerpc-ibm-aix5.1.0.0</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01145.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01145.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01043.html">3.2.1</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00632.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00632.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00981.html">3.2.1</a>
 </td>
 </tr>
 
@@ -602,7 +656,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.7</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00486.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00486.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00738.html">3.2.1</a>
 </td>
 </tr>
 
@@ -635,6 +690,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.7</td>
+<td>binutils 2.13.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01040.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77, Java):
@@ -645,7 +707,10 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparc-sun-solaris2.8</td>
 <td>&nbsp;</td>
 <td>Successful:
-<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01700.html">3.2</a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01700.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00950.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00971.html">3.2.1</a>
+</td>
 </tr>
 
 <tr>
@@ -656,6 +721,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00480.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.8</td>
+<td>binutils 2.13.1</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01041.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -687,7 +759,8 @@ Installing GCC: Final Installation</a>.</p>
 <td>sparcv9-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00570.html">3.2</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00570.html">3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00782.html">3.2.1</a>
 </td>
 </tr>
 
