--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -185,7 +185,7 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i586-pc-linux-gnu</td>
-<td>Mandrake 9.0</td>
+<td>Mandrake 9.0, kernel 2.4.19</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00895.html">3.2.1</a>
 <br />Test results:
@@ -288,7 +288,7 @@ Installing GCC: Final Installation</a>.</p>
 <td>custom; glibc 2.2.5, kernel 2.4.18</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01097.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00907.html">3.2.1></a></td>
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00907.html">3.2.1</a></td>
 </tr>
 
 <tr>
