Add documentation for Tree Browser.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -87,6 +87,7 @@ the existing transformations currently done on RTL.</p>
 <li><a href="#simple">SIMPLE trees</a></li>
 <li><a href="#unparse">Unparsing C trees</a></li>
 <li><a href="#ssa">SSA implementation</a></li>
+<li><a href="#tb">Tree Browser</a></li>
 <li><a href="#todo">TODO List (last updated: 2002-09-18)</a></li>
 </ul>
 
@@ -189,6 +190,11 @@ code.</li>
 conversion process:</p>
 
 <p><img src="call-graph.png" alt=""/></p>
+
+<hr />
+<h2><a name="tb">Tree Browser</a></h2>
+For debugging, browsing, discovering, and playing with trees you can use the
+<a href="tree-browser.html">Tree Browser</a> directly from gdb.
 
 <hr />
 <h2><a name="todo">TODO List</a></h2>
